--- a/group.html
+++ b/group.html
@@ -90,7 +90,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
 
   <li style="margin-bottom: 1ex;"><b><a href="https://mori1116.github.io">Dongjae Lee</a></b>
   <ul>
-    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2023-03 to 2022-08:<br/>
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2023-03 to 2022-08:
     Back-Translation Proof for Formally Secure Compilation of Compartmentalized C Programs
     </li>
   </ul>
@@ -101,7 +101,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
 
   <li style="margin-bottom: 1ex;"><b><a href="https://elefthei.github.io">Eleftherios (Lef) Ioannidis</a></b>
   <ul>
-    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2023-07 to 2023-09:<br/>
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2023-07 to 2023-09:
     Formal Verification of Distributed Systems
     </li>
   </ul>
