--- a/group.html
+++ b/group.html
@@ -102,7 +102,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   <li style="margin-bottom: 1ex;"><b><a href="https://elefthei.github.io">Eleftherios (Lef) Ioannidis</a></b>
   <ul>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2023-07 to 2023-09:
-    Formal Verification of Distributed Systems
+    Verification of Distributed Systems
     </li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
