--- a/index.html
+++ b/index.html
@@ -200,12 +200,12 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://cezarandrici.com">Cezar Constantin-Andrici</a></b> won 1st prize at the Student Research Competition of <a href="https://icfp20.sigplan.org/track/icfp-2020-student-research-competition#Results">ICFP 2020</a> <!-- (graduates section) --></li>
+  <!-- <li style="margin-bottom: 1ex;"><b><a href="https://cezarandrici.com">Cezar Constantin-Andrici</a></b> won 1st prize at the Student Research Competition of <a href="https://icfp20.sigplan.org/track/icfp-2020-student-research-competition#Results">ICFP 2020</a> <\!-- (graduates section) -\-></li> -->
 
-  <li style="margin-bottom: 1ex;">
-    On 1 May 2020 I joined the new <b>Max Planck Institute for Security and Privacy (<a href="https://www.mpi-sp.org">MPI-SP</a>)</b></br>
-    in Bochum, Germany as a Tenured Faculty (Research Group Leader with Tenure).
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"> -->
+  <!--   On 1 May 2020 I joined the new <b>Max Planck Institute for Security and Privacy (<a href="https://www.mpi-sp.org">MPI-SP</a>)</b></br> -->
+  <!--   in Bochum, Germany as a Tenured Faculty (Research Group Leader with Tenure). -->
+  <!-- </li> -->
 
   <!-- <li style="margin-bottom: 1ex;"><b>Nominated for <a href="http://eatcs.org/index.php/best-etaps-paper">EATCS Award</a></b> -->
   <!--        for the best ETAPS 2020 paper in theoretical computer science for -->
@@ -223,11 +223,8 @@ could contribute:
   <!--     <b><a href="https://kenji.maillard.blue/Writings/PrinciplesOfProgramVerificationForArbitraryMonadicEffects.pdf">PhD thesis</a></b> on 25 Nov 2019 -->
   <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;"><b>Distinguished Paper Award at <a href="https://web.stevens.edu/csf2019">CSF 2019</a> for <a href="https://arxiv.org/abs/1807.04603">Journey Beyond Full Abstraction</a></b> 
-  <!-- <ul> -->
-  <!-- <li>Conference: 25-28 June 2019, Stevens Institute of Technology, Hoboken, NJ, USA</li> -->
-  <!-- </ul> -->
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"><b>Distinguished Paper Award at <a href="https://web.stevens.edu/csf2019">CSF 2019</a> for <a href="https://arxiv.org/abs/1807.04603">Journey Beyond Full Abstraction</a></b>  -->
+  <!-- </li> -->
 
   <!-- <li style="margin-bottom: 1ex;"><a href="https://www.react.uni-saarland.de/rv2019/"><\!-- International Conference on  -\->Runtime Verification, RV 2019</a> (PC member) -->
   <!-- <\!-- <ul> -\-> -->
