--- a/publications.html
+++ b/publications.html
@@ -50,7 +50,7 @@
     Deepak Garg, and
     C&#259;t&#259;lin Hri&#539;cu.
     <b><a href="https://arxiv.org/abs/2110.01439">SecurePtrs: Proving Secure Compilation with Data-Flow Back-Translation and Turn-Taking Simulation</a></b>.
-    To appear in <a href="https://www.ieee-security.org/TC/CSF2022/">35th
+    In <a href="https://www.ieee-security.org/TC/CSF2022/">35th
     IEEE Computer Security Foundations Symposium (CSF)</a>.
     August 2022.
     <ul style="font-size: small">
