--- a/index.html
+++ b/index.html
@@ -142,6 +142,15 @@ could contribute:
   </ul>
   </li>
 
+  <li style="margin-bottom: 1ex;">
+    <b><a href="https://www.sigsac.org/ccs.html">Computer and Communications Security, CCS</b></a>
+    (<b>Track PC Chair for Formal Methods and Programming Languages</b> in <a href="https://www.sigsac.org/ccs/CCS2024">2024</a>)
+  <ul>
+  <!-- <li>Submission deadline: 11 July 2013</li> -->
+  <!-- <li>Symposium: 17-19 January 2024, London, UK</li> -->
+  </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/CSFWweb/index.html">Computer Security Foundations</a>, CSF</b> (<b>Test-of-Time Awards Chair</b> in <a href="https://csf2023.ieee-security.org">2023</a> and <a href="https://csf2024.ieee-security.org/">2024</a>;<br/> also PC Member in <a href="https://www.ieee-security.org/TC/CSF2020/">2020</a>, <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a> and <a href="https://csf2024.ieee-security.org/">2024</a>)
   <ul>
   <!-- <li><b>Submission deadlines: <del>8 May 2020, 2 October 2020,</del> and 8 February 2021</b></li> -->
