--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@ could contribute:
 
   <li style="margin-bottom: 1ex;">
     <b><a href="https://www.sigsac.org/ccs.html">Computer and Communications Security, CCS</b></a>
-    (<b>Track PC Chair for Formal Methods and Programming Languages</b> in <a href="https://www.sigsac.org/ccs/CCS2024">2024</a>)
+    (<b>Track PC Chair</b> for Formal Methods and Programming Languages in <a href="https://www.sigsac.org/ccs/CCS2024">2024</a>,
+    also PC Member in <a href="https://www.sigsac.org/ccs/CCS2018/papers">2018</a>)
   <ul>
   <!-- <li>Submission deadline: 11 July 2013</li> -->
   <!-- <li>Symposium: 17-19 January 2024, London, UK</li> -->
