--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@ I am very fortunate to work with a group of outstanding students and starting re
     C&#259;t&#259;lin Hri&#539;cu, and
     Bas Spitters.
     <b><a href="https://eprint.iacr.org/2023/185">The Last Yard: Foundational End-to-End Verification of High-Speed Cryptography</a></b>.
-    Draft. Oct 2023.
+    To appear in ACM SIGPLAN International Conference on Certified Programs and Proofs (CPP). January 2024.
     <!-- <ul style="font-size: small"> -->
     <!--   <li><a href="">Coq development</a></li> -->
     <!-- </ul> -->
