--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@ could contribute:
   <ul>
   <!-- <li>Abstract deadline: 1 July 2017</li> -->
   <!-- <li>Submission deadline: 11 July 2013</li> -->
+  <li>Early registration deadline: 16 December 2022</li>
   <li>Symposium: 17-19 January 2024, London, UK</li>
   </ul>
   </li>
@@ -169,15 +170,15 @@ could contribute:
   <ul>
   <!-- <li>Abstract deadline: 12 September 2023</li> -->
   <!-- <li>Submission deadline: 19 September 2023</li> -->
-  <!-- <li>Early registration deadline: 16 December 2022</li> -->
+  <li>Early registration deadline: 14 December 2023</li>
   <li>Conference: 15-16 January 2024, London, UK (with <a href="https://popl24.sigplan.org">POPL</a>)</li>
   </ul>
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/series/prisc"><!-- Workshop on --> Principles of Secure Compilation</a>, PriSC</b> (<b>Steering Committee Chair</b> 2019--2023, <b>Steering Committee Member</b> since 2023, also <b>PC Chair</b> in <a href="https://popl18.sigplan.org/track/prisc-2018">2018</a>)
   <ul>
-  <li>Submission deadline: 2 November 2023</li>
-  <!-- <li>Early registration deadline: 16 December 2022</li> -->
+  <!-- <li>Submission deadline: 2 November 2023</li> -->
+  <li>Early registration deadline: 14 December 2023</li>
   <li>Workshop: 20 January 2024, London, UK (with <a href="https://popl24.sigplan.org/">POPL</a>)</li>
   </ul>
   </li>
