--- a/index.html
+++ b/index.html
@@ -148,8 +148,9 @@ could contribute:
     (<b>Track PC Chair</b> for Formal Methods and Programming Languages in <a href="https://www.sigsac.org/ccs/CCS2024">2024</a>,
     also PC Member in <a href="https://www.sigsac.org/ccs/CCS2018/papers">2018</a>)
   <ul>
-  <!-- <li>Submission deadline: 11 July 2013</li> -->
-  <!-- <li>Symposium: 17-19 January 2024, London, UK</li> -->
+  <li>First submission deadline: 28 January 2024</li>
+  <li>Second submission deadline: 14 April 2024 (tentative)</li>
+  <li>Conference: 14-18 October 2024, Salt Lake City, USA</li>
   </ul>
   </li>
 
