--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@ I am very fortunate to work with a group of outstanding students and starting re
 <h2 id="publications">Recent Publications and Drafts</h2>
 <!-- TODO: Use bibtex2html for this! -->
 <p>For a complete list of my papers please look <a href="publications.html">here</a><!--<br/>-->
-(also on <a href="http://www.informatik.uni-trier.de/~ley/pers/hy/h/Hritcu:Catalin.html">DBLP</a> and <a href="http://scholar.google.com/citations?user=d-3XtW8AAAAJ">Google Scholar</a><!--, <a href="http://academic.research.microsoft.com/Author/3586469">MS Academic Search</a>, and <a href="http://www.ad-astra.ro/whoswho/view_profile.php?user_id=1843&lang=en">AdAstra.ro</a>-->).</p>
+(also on <a href="https://dblp.org/pid/09/2281.html">DBLP</a> and <a href="http://scholar.google.com/citations?user=d-3XtW8AAAAJ">Google Scholar</a><!--, <a href="http://academic.research.microsoft.com/Author/3586469">MS Academic Search</a>, and <a href="http://www.ad-astra.ro/whoswho/view_profile.php?user_id=1843&lang=en">AdAstra.ro</a>-->).</p>
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
