--- a/index.html
+++ b/index.html
@@ -132,18 +132,6 @@ could contribute:
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
-    <b><a href="https://popl24.sigplan.org/series/POPL">Principles of Programming Languages, POPL</b></a>
-    (<b>Artifact Evaluation Chair</b> in <a href="https://popl18.sigplan.org/">2018</a> and <a href="https://popl19.sigplan.org/">2019</a>;
-     also PC Member in <a href="https://popl17.sigplan.org/">2017</a> and <a href="https://popl24.sigplan.org">2024</a>)
-  <ul>
-  <!-- <li>Abstract deadline: 1 July 2017</li> -->
-  <!-- <li>Submission deadline: 11 July 2013</li> -->
-  <li>Early registration deadline: 14 December 2023</li>
-  <li>Symposium: 17-19 January 2024, London, UK</li>
-  </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;">
     <b><a href="https://www.sigsac.org/ccs.html">Computer and Communications Security, CCS</b></a>
     (<b>Track PC Chair</b> for Formal Methods and Programming Languages in <a href="https://www.sigsac.org/ccs/CCS2024">2024</a>,
     also PC Member in <a href="https://www.sigsac.org/ccs/CCS2018/papers">2018</a>)
@@ -151,6 +139,18 @@ could contribute:
   <li>First submission deadline: 28 January 2024</li>
   <li>Second submission deadline: 14 April 2024 (tentative)</li>
   <li>Conference: 14-18 October 2024, Salt Lake City, USA</li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+    <b><a href="https://popl24.sigplan.org/series/POPL">Principles of Programming Languages, POPL</b></a>
+    (<b>Artifact Evaluation Chair</b> in <a href="https://popl18.sigplan.org/">2018</a> and <a href="https://popl19.sigplan.org/">2019</a>;
+     also PC Member in <a href="https://popl17.sigplan.org/">2017</a> and <a href="https://popl24.sigplan.org">2024</a>)
+  <ul>
+  <!-- <li>Abstract deadline: 1 July 2017</li> -->
+  <!-- <li>Submission deadline: 11 July 2013</li> -->
+  <!-- <li>Early registration deadline: 14 December 2023</li> -->
+  <li>Symposium: 17-19 January 2024, London, UK</li>
   </ul>
   </li>
 
@@ -171,7 +171,7 @@ could contribute:
   <ul>
   <!-- <li>Abstract deadline: 12 September 2023</li> -->
   <!-- <li>Submission deadline: 19 September 2023</li> -->
-  <li>Early registration deadline: 14 December 2023</li>
+  <!-- <li>Early registration deadline: 14 December 2023</li> -->
   <li>Conference: 15-16 January 2024, London, UK (with <a href="https://popl24.sigplan.org">POPL</a>)</li>
   </ul>
   </li>
@@ -179,7 +179,7 @@ could contribute:
   <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/series/prisc"><!-- Workshop on --> Principles of Secure Compilation</a>, PriSC</b> (<b>Steering Committee Chair</b> 2019--2023, <b>Steering Committee Member</b> since 2023, also <b>PC Chair</b> in <a href="https://popl18.sigplan.org/track/prisc-2018">2018</a>)
   <ul>
   <!-- <li>Submission deadline: 2 November 2023</li> -->
-  <li>Early registration deadline: 14 December 2023</li>
+  <!-- <li>Early registration deadline: 14 December 2023</li> -->
   <li>Workshop: 20 January 2024, London, UK (with <a href="https://popl24.sigplan.org/">POPL</a>)</li>
   </ul>
   </li>
