--- a/publications.html
+++ b/publications.html
@@ -43,6 +43,20 @@
   </li>
 
   <li style="margin-bottom: 1ex;">
+    Philipp G. Haselwarter,
+    Benjamin Salling Hvass,
+    Lasse Letager Hansen,
+    Théo Winterhalter,
+    C&#259;t&#259;lin Hri&#539;cu, and
+    Bas Spitters.
+    <b><a href="https://eprint.iacr.org/2023/185">The Last Yard: Foundational End-to-End Verification of High-Speed Cryptography</a></b>.
+    To appear in ACM SIGPLAN International Conference on Certified Programs and Proofs (CPP). January 2024.
+    <!-- <ul style="font-size: small"> -->
+    <!--   <li><a href="">Coq development</a></li> -->
+    <!-- </ul> -->
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Akram El-Korashy,
     Roberto Blanco,
     Jérémy Thibault,
@@ -715,20 +729,6 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 
 <h3>Drafts, Informal Publications, and Workshops</h3>
 <ol start="50" style="width:42em; text-align: left">
-
-  <li style="margin-bottom: 1ex;">
-    Philipp G. Haselwarter,
-    Benjamin Salling Hvass,
-    Lasse Letager Hansen,
-    Théo Winterhalter,
-    C&#259;t&#259;lin Hri&#539;cu, and
-    Bas Spitters.
-    <b><a href="https://eprint.iacr.org/2023/185">The Last Yard: Foundational End-to-End Verification of High-Speed Cryptography</a></b>.
-    Draft. October 2023.
-    <!-- <ul style="font-size: small"> -->
-    <!--   <li><a href="">Coq development</a></li> -->
-    <!-- </ul> -->
-  </li>
 
   <li style="margin-bottom: 1ex;">
     Jérémy Thibault,
