--- a/index.html
+++ b/index.html
@@ -596,9 +596,9 @@ I am very fortunate to work with a group of outstanding students and starting re
     Bas Spitters.
     <b><a href="https://eprint.iacr.org/2023/185">The Last Yard: Foundational End-to-End Verification of High-Speed Cryptography</a></b>.
     To appear in ACM SIGPLAN International Conference on Certified Programs and Proofs (CPP). January 2024.
-    <!-- <ul style="font-size: small"> -->
-    <!--   <li><a href="">Coq development</a></li> -->
-    <!-- </ul> -->
+    <ul style="font-size: small">
+      <li><a href="https://github.com/SSProve/ssprove-jasmin">Coq development</a></li>
+    </ul>
   </li>
 
   <li style="margin-bottom: 1ex;">
