--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ could contribute:
   <!-- <li>Abstract deadline: 1 July 2017</li> -->
   <!-- <li>Submission deadline: 11 July 2013</li> -->
   <!-- <li>Early registration deadline: 14 December 2023</li> -->
-  <li>Symposium: 17-19 January 2024, London, UK</li>
+  <!-- <li>Symposium: 17-19 January 2024, London, UK</li> -->
   </ul>
   </li>
 
@@ -172,7 +172,7 @@ could contribute:
   <!-- <li>Abstract deadline: 12 September 2023</li> -->
   <!-- <li>Submission deadline: 19 September 2023</li> -->
   <!-- <li>Early registration deadline: 14 December 2023</li> -->
-  <li>Conference: 15-16 January 2024, London, UK (with <a href="https://popl24.sigplan.org">POPL</a>)</li>
+  <!-- <li>Conference: 15-16 January 2024, London, UK (with <a href="https://popl24.sigplan.org">POPL</a>)</li> -->
   </ul>
   </li>
 
@@ -180,7 +180,7 @@ could contribute:
   <ul>
   <!-- <li>Submission deadline: 2 November 2023</li> -->
   <!-- <li>Early registration deadline: 14 December 2023</li> -->
-  <li>Workshop: 20 January 2024, London, UK (with <a href="https://popl24.sigplan.org/">POPL</a>)</li>
+  <!-- <li>Workshop: 20 January 2024, London, UK (with <a href="https://popl24.sigplan.org/">POPL</a>)</li> -->
   </ul>
   </li>
 
