--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@ could contribute:
     (<b>Track PC Chair</b> for Formal Methods and Programming Languages in <a href="https://www.sigsac.org/ccs/CCS2024">2024</a>,
     also PC Member in <a href="https://www.sigsac.org/ccs/CCS2018/papers">2018</a>)
   <ul>
-  <li>First submission deadline: 28 January 2024</li>
-  <li>Second submission deadline: 14 April 2024 (tentative)</li>
+  <li>First submission deadline: <b>28 January 2024</b></li>
+  <li>Second submission deadline: <b>14 April 2024</b> (tentative)</li>
   <li>Conference: 14-18 October 2024, Salt Lake City, USA</li>
   </ul>
   </li>
