--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ could contribute:
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
-    <b><a href="https://www.sigsac.org/ccs.html">Computer and Communications Security, CCS</b></a>
+    <b><a href="https://www.sigsac.org/ccs/CCS2024/">Computer and Communications Security, CCS</b></a> <!-- https://www.sigsac.org/ccs.html -->
     (<b>Track PC Chair</b> for Formal Methods and Programming Languages in <a href="https://www.sigsac.org/ccs/CCS2024">2024</a>,
     also PC Member in <a href="https://www.sigsac.org/ccs/CCS2018/papers">2018</a>)
   <ul>
