--- a/index.html
+++ b/index.html
@@ -571,6 +571,22 @@ I am very fortunate to work with a group of outstanding students and starting re
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Jérémy Thibault,
+    Roberto Blanco,
+    Dongjae Lee,
+    Sven Argo,
+    Arthur Azevedo de Amorim,
+    Aïna Linn Georges,
+    C&#259;t&#259;lin Hri&#539;cu, and
+    Andrew Tolmach.
+    <b><a href="">SECOMP: Formally Secure Compilation of Compartmentalized C Programs</a></b>.
+    Draft, January 2024.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/secure-compilation/CompCert">Coq development</a></li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Cezar-Constantin Andrici,
     Ștefan Ciobâcă,
     C&#259;t&#259;lin Hri&#539;cu,
