--- a/index.html
+++ b/index.html
@@ -583,6 +583,8 @@ I am very fortunate to work with a group of outstanding students and starting re
     Draft, January 2024.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/CompCert">Coq development</a></li>
+      <li><a href="publications/SECOMP2CHERI-PriSC23.pdf">An extended abstract</a> about this work was presented at
+          <a href="https://popl23.sigplan.org/home/prisc-2023">PriSC'23</a></li>
     </ul>
   </li>
 
@@ -614,22 +616,6 @@ I am very fortunate to work with a group of outstanding students and starting re
     To appear in ACM SIGPLAN International Conference on Certified Programs and Proofs (CPP). January 2024.
     <ul style="font-size: small">
       <li><a href="https://github.com/SSProve/ssprove-jasmin">Coq development</a></li>
-    </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;">
-    Jérémy Thibault,
-    Arthur Azevedo de Amorim,
-    Roberto Blanco,
-    Aïna Linn Georges,
-    C&#259;t&#259;lin Hri&#539;cu,
-    Andrew Tolmach.
-    <b><a href="publications/SECOMP2CHERI-PriSC23.pdf">SECOMP2CHERI: Securely Compiling Compartments
-    from CompCert C to a Capability Machine</a></b>. Extended Abstract at
-      <a href="https://popl23.sigplan.org/home/prisc-2023">Workshop on Principles of Secure Compilation (PriSC)</a>.
-      Jan 2023.
-    <ul style="font-size: small">
-      <li><a href="https://github.com/secure-compilation/CompCert">Coq development</a></li>
     </ul>
   </li>
 
