Update Jeremy's homepage URL

--- a/group.html
+++ b/group.html
@@ -42,7 +42,7 @@
   </div>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://perso.eleves.ens-rennes.fr/people/Jeremy.Thibault/">Jérémy Thibault</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://jerem.yt/">Jérémy Thibault</a></b>
   <ul>
     <li style="margin-top: 1ex;">PhD Student at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> (2018-08 to 2020-04) then at <a href="https://www.mpi-sp.org/">MPI-SP</a> (since 2020-05):<br/>
     Secure Compartmentalizing Compilation to a Tagged Architecture</li>
