--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><a href="https://cezarandrici.com">Cezar-Constantin Andrici</a> (PhD Student, MPI-SP)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://perso.eleves.ens-rennes.fr/people/Jeremy.Thibault/">Jérémy Thibault</a> (PhD Student, MPI-SP)</li>
+  <li style="margin-bottom: 1ex;"><a href="http://jerem.yt/">Jérémy Thibault</a> (PhD Student, MPI-SP)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://people.mpi-sws.org/~wuttke/">Maxi Wuttke</a> (PhD Student, MPI-SP)</li>
 
