--- a/teaching/lyon2019/index.html
+++ b/teaching/lyon2019/index.html
@@ -14,7 +14,7 @@ at INSA, Lyon on 27-31 August 2019</p>
 <p><b>Teaching team</b>: <a href="http://prosecco.gforge.inria.fr/personal/hritcu/">Cătălin Hriţcu</a>,
 <a href="https://robblanco.github.io/">Roberto Blanco</a>,
 <a href="https://github.com/floriangru">Florian Groult</a>,
-<a href="http://perso.eleves.ens-rennes.fr/people/Jeremy.Thibault/">Jérémy Thibault</a>,
+<a href="http://jerem.yt/">Jérémy Thibault</a>,
 <a href="https://dcc.fceia.unr.edu.ar/~erivas/">Exequiel Rivas</a>,
 and various local helpers.
 </p>
