--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ could contribute:
   <ul>
   <!-- <li>First submission deadline: <b>28 January 2024</b></li> -->
   <li>Second submission deadline: <b>14 April 2024</b> (tentative)</li>
-  <li>Conference: 14-18 October 2024, Salt Lake City, USA</li>
+  <li>Conference: 14-18 October 2024, Salt Lake City, Utah, USA</li>
   </ul>
   </li>
 
@@ -159,7 +159,7 @@ could contribute:
   <!-- <li>Abstract deadline: 1 July 2017</li> -->
   <!-- <li>Submission deadline: 11 July 2013</li> -->
   <!-- <li>Early registration deadline: 14 December 2023</li> -->
-  <!-- <li>Symposium: 17-19 January 2024, London, UK</li> -->
+  <li>Symposium: 19-25 January 2025, Denver, Colorado, USA</li>
   </ul>
   </li>
 
