--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ could contribute:
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://danel.ahman.ee">Danel Ahman</a></b>, former PostDoc in my group, started as Associate Prof. at <a href="https://cs.ut.ee/en">University of Tartu</a> in January 2024.</li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://danel.ahman.ee">Danel Ahman</a></b>, former PostDoc in my group, started as Associate Professor at <a href="https://cs.ut.ee/en">University of Tartu</a> in January 2024.</li>
 
   <li style="margin-bottom: 1ex;">
     <b><a href="https://www.sigsac.org/ccs/CCS2024/">Computer and Communications Security, CCS</b></a> <!-- https://www.sigsac.org/ccs.html -->
