--- a/group.html
+++ b/group.html
@@ -56,21 +56,6 @@
 
   <li style="margin-bottom: 1ex;"><b><a href="https://people.mpi-sws.org/~wuttke/">Maxi Wuttke</a></b> (PhD Student, MPI-SP since Feb 2023, former MPI-SWS)</li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://mtzguido.github.io">Guido Martínez</a></b>
-  <ul>
-    <li style="margin-top: 1ex;">Co-Supervised PhD Student at <a href="http://www.cifasis-conicet.gov.ar">CIFASIS</a>-<a href="https://www.rosario-conicet.gov.ar/investigacion/cifasis-menu">CONICET</a> Rosario since 2017-04:<br/>
-     Metatheory for Semi-Automatic Verification of Effectful Programs.</li>
-    <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2018-09 to 2018-12:<br/> <a href="https://arxiv.org/abs/1803.06547">Meta-F*: Proof Automation with SMT, Tactics, and Metaprograms</a></li>
-    <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2016-01 to 2016-06:<br/> <a href="https://www.fstar-lang.org/papers/dm4free/">Dijkstra Monads for Free</a></li>
-  </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
-[MSc student at 
-PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Rosario</a>]
-[PhD student at <a href="http://www.cifasis-conicet.gov.ar">CIFASIS</a>-<ahref="https://www.rosario-conicet.gov.ar/investigacion/cifasis-menu">CONICET</a> Rosario]<br/>
-[<b>Now Research Software Engineer at <a href="https://www.microsoft.com/en-us/research/group/research-software-engineering-rise/">Microsoft Research in Redmond</a></b>]
-</div>
-  </li>
-
   <li style="margin-bottom: 1ex;"><b><a href="https://robblanco.github.io/">Roberto Blanco</a></b>
   <ul>
     <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.mpi-sp.org/">MPI-SP</a> since 2020-05:<br/>
@@ -108,6 +93,21 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
   [PhD Student at University of Pennsylvania]
   </div>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://mtzguido.github.io">Guido Martínez</a></b>
+  <ul>
+    <li style="margin-top: 1ex;">Co-Supervised PhD Student at <a href="http://www.cifasis-conicet.gov.ar">CIFASIS</a>-<a href="https://www.rosario-conicet.gov.ar/investigacion/cifasis-menu">CONICET</a> Rosario since 2017-04:<br/>
+     Metatheory for Semi-Automatic Verification of Effectful Programs.</li>
+    <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2018-09 to 2018-12:<br/> <a href="https://arxiv.org/abs/1803.06547">Meta-F*: Proof Automation with SMT, Tactics, and Metaprograms</a></li>
+    <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2016-01 to 2016-06:<br/> <a href="https://www.fstar-lang.org/papers/dm4free/">Dijkstra Monads for Free</a></li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+[MSc student at 
+PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Rosario</a>]
+[PhD student at <a href="http://www.cifasis-conicet.gov.ar">CIFASIS</a>-<ahref="https://www.rosario-conicet.gov.ar/investigacion/cifasis-menu">CONICET</a> Rosario]<br/>
+[<b>Now Research Software Engineer at <a href="https://www.microsoft.com/en-us/research/group/research-software-engineering-rise/">Microsoft Research in Redmond</a></b>]
+</div>
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/carmine-abate-676136213/">Carmine Abate</a></b>
@@ -245,7 +245,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   </ul>
   </li>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
-[Now PostDoc at <a href="https://www.fmf.uni-lj.si/en/">University of Ljubljana</a>]</div></li>
+[Then PostDoc at <a href="https://www.fmf.uni-lj.si/en/">University of Ljubljana</a>][<b>Now Associate Professor at <a href="https://cs.ut.ee/en">University of Tartu</a></b>]</div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://arthuraa.net">Arthur Azevedo de Amorim</a></b>
   <ul>
