--- a/group.html
+++ b/group.html
@@ -236,7 +236,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
       Implementing Meta-programming and Tactics in F*</li>
   </ul>
   </li>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now Developer at <a href="https://www.nomadic-labs.com/">Nomadic Labs</a> working on <a href="https://tezos.com/">Tezos</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Then Developer at <a href="https://www.nomadic-labs.com/">Nomadic Labs</a> working on <a href="https://tezos.com/">Tezos</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://danelahman.github.io/">Danel Ahman</a></b>
   <ul>
@@ -276,7 +276,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
     <li style="margin-top: 1ex;">PostDoctoral Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-01 to 2017-12:
     <a href="https://arxiv.org/abs/1802.00588">Formally Secure Compilation</a></li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now Developer at <a href="https://www.nomadic-labs.com/">Nomadic Labs</a> working on <a href="https://tezos.com/">Tezos</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now Developer at <a href="https://www.nomadic-labs.com/">Nomadic Labs</a> working on <a href="https://tezos.com/">Tezos</a>][Now Research Scientist at <a href="https://matter-labs.io">Matter Labs</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://fachini.net/">Guglielmo Fachini</a></b>
   <ul>
