--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b>Upcoming: <a href="">Functional Programming</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr University Bochum</a>, April--July 2023 2024</a>
+  <li style="margin-bottom: 1ex;"><b>Upcoming: <a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=57071">Functional Programming</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr University Bochum</a>, April--July 2024</a>
   </li>
 
   <li style="margin-bottom: 1ex;"><b>Ongoing: <a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=54279">Foundations of Programming Languages, Verification, and Security</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr University Bochum</a>, October 2023--February 2024</a>
