--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@ could contribute:
     also PC Member in <a href="https://www.sigsac.org/ccs/CCS2018/papers">2018</a>)
   <ul>
   <!-- <li>First submission deadline: <b>28 January 2024</b></li> -->
-  <li>Second submission deadline: <b>14 April 2024</b> (tentative)</li>
+  <li>Second submission deadline: <b>29 April 2024</b></li>
   <li>Conference: 14-18 October 2024, Salt Lake City, Utah, USA</li>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/CSFWweb/index.html">Computer Security Foundations</a>, CSF</b> (<b>Test-of-Time Awards Chair</b> in <a href="https://csf2023.ieee-security.org">2023</a> and <a href="https://csf2024.ieee-security.org/">2024</a>;<br/> also PC Member in <a href="https://www.ieee-security.org/TC/CSF2020/">2020</a>, <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a> and <a href="https://csf2024.ieee-security.org/">2024</a>)
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/CSFWweb/index.html">Computer Security Foundations</a>, CSF</b> (<b>Steering Committee Member</b>, <b>Test-of-Time Awards Chair</b> in <a href="https://csf2023.ieee-security.org">2023</a> and <a href="https://csf2024.ieee-security.org/">2024</a>;<br/> also PC Member in <a href="https://www.ieee-security.org/TC/CSF2020/">2020</a>, <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a> and <a href="https://csf2024.ieee-security.org/">2024</a>)
   <ul>
   <!-- <li><b>Submission deadlines: <del>8 May 2020, 2 October 2020,</del> and 8 February 2021</b></li> -->
   <!-- <li>CSF 2023 Symposium: 10-13 July 2023, Dubrovnik, Croatia</li> -->
