--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
   <li style="margin-bottom: 1ex;"><b>Upcoming: <a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=57071">Functional Programming</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr University Bochum</a>, April--July 2024</a>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b>Ongoing: <a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=54279">Foundations of Programming Languages, Verification, and Security</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr University Bochum</a>, October 2023--February 2024</a>
+  <li style="margin-bottom: 1ex;"><b>Recent: <a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=54279">Foundations of Programming Languages, Verification, and Security</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr University Bochum</a>, October 2023--February 2024</a>
   </li>
 
   <li style="margin-bottom: 1ex;"><b>Recent: <a href="https://moodle.ruhr-uni-bochum.de/course/view.php?id=51278">Proofs are Programs</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr University Bochum</a>, April--July 2023</a>
