--- a/group.html
+++ b/group.html
@@ -135,7 +135,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   </div>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://cs.au.dk/~ageorges/">Aïna Linn Georges</b></a>
+  <li style="margin-bottom: 1ex;"><b><a href="https://people.mpi-sws.org/~algeorges">Aïna Linn Georges</b></a>
   <ul>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2022-07 to 2022-09:<br/>
     Capabilities Backend to CompCert with Secure Components
