--- a/index.html
+++ b/index.html
@@ -559,6 +559,12 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto (Rob) Blanco</a> (Postdoctoral Researcher, MPI-SP)</li>
 
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/jos-len">Joseph Lenormand</a> (Research Intern, ENS Paris-Saclay)</li>
+
+  <li style="margin-bottom: 1ex;"><a href="https://gitlab.aliens-lyon.fr/lucie.lahaye">Lucie Lahaye</a> (Research Intern, ENS Lyon) -- starting in May 2024</li>
+
+  <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/ricleanu/">Ruxandra Icleanu</a> (Research Intern, University of Edinburgh) -- starting in June 2024</li>
+
   <!-- <li style="margin-bottom: 1ex;"><a href="https://mtzguido.github.io">Guido Martínez</a> (Co-Supervised PhD Student, CIFASIS-CONICET Rosario)</li> -->
 
 </ul>
