--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><a href="http://jerem.yt/">Jérémy Thibault</a> (PhD Student, MPI-SP)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://people.mpi-sws.org/~wuttke/">Maxi Wuttke</a> (PhD Student, MPI-SP)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://maxi-wuttke.codeberg.page">Maxi Wuttke</a> (PhD Student, MPI-SP)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto (Rob) Blanco</a> (Postdoctoral Researcher, MPI-SP)</li>
 
