--- a/group.html
+++ b/group.html
@@ -54,7 +54,7 @@
 [PhD student at Inria/ENS Paris, then at <a href="https://www.mpi-sp.org/">MPI-SP</a>/RUB]
 </div></li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://people.mpi-sws.org/~wuttke/">Maxi Wuttke</a></b> (PhD Student, MPI-SP since Feb 2023, former MPI-SWS)</li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://maxi-wuttke.codeberg.page">Maxi Wuttke</a></b> (PhD Student, MPI-SP since Feb 2023, former MPI-SWS)</li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://robblanco.github.io/">Roberto Blanco</a></b>
   <ul>
