--- a/index.html
+++ b/index.html
@@ -784,10 +784,10 @@ I am very fortunate to work with a group of outstanding students and starting re
   <li style="margin-bottom: 1ex;"><em>Formally Verified Security</em></a>
 
     <ul style="font-size: small">
-      <li><a href="https://www.cis.mpg.de/graduate-programs/">CS @ Max Planck</a> Open House: <a href="talks/2024-03-21-CS-at-Max-Planck-Open-House.pdf">slides</a> and <a href="https://youtu.be/82c0u6-OU_g">video</a> (2024-03-21)</li>
+      <li><a href="https://www.cis.mpg.de/graduate-programs/">CS @ Max Planck</a> Open House: <a href="talks/2024-03-21-CS-at-Max-Planck-Open-House.pdf">slides</a> and <b><a href="https://youtu.be/82c0u6-OU_g">video</a></b> (2024-03-21)</li>
       <li><a href="https://casa.rub.de/en/events/casa-summer-school">CASA Summer School 2023</a>: <a href="talks/2023-08-14-CASA-Summer-School.pdf">slides</a> (2023-08-14)</li>
       <li><a href="https://www.mpi-sp.org">MPI-SP</a> Scientific Advisory Board visit: <a href="talks/2023-05-11-SAB-MPI-SP-evaluation.pdf">slides</a> (2023-05-11)</li>
-      <li><a href="https://www.cis.mpg.de/graduate-programs/">CS @ Max Planck</a> Open House: <a href="talks/2020-04-03-CS-at-Max-Planck-Open-House.pdf">slides</a> and <a href="https://youtu.be/TMwm7Qt-iCE">video</a> (2020-04-03)</li>
+      <li><a href="https://www.cis.mpg.de/graduate-programs/">CS @ Max Planck</a> Open House: <a href="talks/2020-04-03-CS-at-Max-Planck-Open-House.pdf">slides</a> (2020-04-03)</li>
     </ul>
   </li>
 
