--- a/index.html
+++ b/index.html
@@ -561,6 +561,8 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/jos-len">Joseph Lenormand</a> (Research Intern, ENS Paris-Saclay)</li>
 
+  <li style="margin-bottom: 1ex;"><a href="">Sebastian Harwig</a> (Research Student Assistant, RUB) -- starting in April 2024</li>
+
   <li style="margin-bottom: 1ex;"><a href="https://gitlab.aliens-lyon.fr/lucie.lahaye">Lucie Lahaye</a> (Research Intern, ENS Lyon) -- starting in May 2024</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/ricleanu/">Ruxandra Icleanu</a> (Research Intern, University of Edinburgh) -- starting in June 2024</li>
