--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ I received my PhD
 <!--(summa cum laude)-->
 from <a href="https://saarland-informatics-campus.de/en/forschung-research/">Saarland
 University</a> in Saarbrücken, Germany
-and recently also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Paris</a>.
+and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Paris</a>.
 <!--  where I -->
 <!-- <\!-- was a member of -->
 <!-- the <a href="http://www.infsec.cs.uni-saarland.de/">Information -->
@@ -561,7 +561,7 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/jos-len">Joseph Lenormand</a> (Research Intern, ENS Paris-Saclay)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="">Sebastian Harwig</a> (Research Student Assistant, RUB) -- starting in April 2024</li>
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/sharwig">Sebastian Harwig</a> (Research Student Assistant, RUB) -- starting in April 2024</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://gitlab.aliens-lyon.fr/lucie.lahaye">Lucie Lahaye</a> (Research Intern, ENS Lyon) -- starting in May 2024</li>
 
