--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ could contribute:
      also PC Member in <a href="https://popl17.sigplan.org/">2017</a> and <a href="https://popl24.sigplan.org">2024</a>)
   <ul>
   <!-- <li>Abstract deadline: 1 July 2017</li> -->
-  <!-- <li>Submission deadline: 11 July 2013</li> -->
+  <li>Submission deadline: 11 July 2024</li>
   <!-- <li>Early registration deadline: 14 December 2023</li> -->
   <li>Symposium: 19-25 January 2025, Denver, Colorado, USA</li>
   </ul>
