--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@ I am very fortunate to work with a group of outstanding students and starting re
     C&#259;t&#259;lin Hri&#539;cu, and
     Andrew Tolmach.
     <b><a href="http://arxiv.org/abs/2401.16277">SECOMP: Formally Secure Compilation of Compartmentalized C Programs</a></b>.
-    Draft, January 2024.
+    Accepted at CCS'24, Draft from January 2024.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/CompCert">Coq development</a></li>
       <li><a href="publications/SECOMP2CHERI-PriSC23.pdf">An extended abstract</a> about this work was presented at
