--- a/publications.html
+++ b/publications.html
@@ -26,6 +26,24 @@
 <ol start="1" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Jérémy Thibault,
+    Roberto Blanco,
+    Dongjae Lee,
+    Sven Argo,
+    Arthur Azevedo de Amorim,
+    Aïna Linn Georges,
+    C&#259;t&#259;lin Hri&#539;cu, and
+    Andrew Tolmach.
+    <b><a href="http://arxiv.org/abs/2401.16277">SECOMP: Formally Secure Compilation of Compartmentalized C Programs</a></b>.
+    Accepted at CCS'24, Draft from January 2024.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/secure-compilation/CompCert">Coq development</a></li>
+      <li><a href="publications/SECOMP2CHERI-PriSC23.pdf">An extended abstract</a> about this work was presented at
+          <a href="https://popl23.sigplan.org/home/prisc-2023">PriSC'23</a></li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Cezar-Constantin Andrici,
     Ștefan Ciobâcă,
     C&#259;t&#259;lin Hri&#539;cu,
@@ -498,7 +516,7 @@
 
 <h3>Journal Papers</h3>
 
-<ol id="journal" start="33" style="width:42em; text-align: left">
+<ol id="journal" start="35" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
     Philipp G. Haselwarter, 
@@ -601,13 +619,13 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 </ol>
 
 <h3>Books</h3>
-<ol start="40" style="width:42em; text-align: left">
+<ol start="42" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#539;cu, Vilhelm Sj&ouml;berg, and Brent Yorgey. <b><a href="https://softwarefoundations.cis.upenn.edu/lf-current/index.html">Software Foundations: Logical Foundations</a></b>, Electronic textbook, August 2018.</li>
   <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#539;cu, Vilhelm Sj&ouml;berg, Andrew Tolmach, and Brent Yorgey. <b><a href="https://softwarefoundations.cis.upenn.edu/plf-current/index.html">Software Foundations: Programming Language Foundations</a></b>, Electronic textbook, August 2018.</li>
 </ol>
 
 <h3>Book Chapter</h3>
-<ol start="42" style="width:42em; text-align: left">
+<ol start="44" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
    Leonidas Lampropoulos, Diane Gallois-Wong, C&#259;t&#259;lin
    Hri&#539;cu, John Hughes, Benjamin C. Pierce, and Li-yao Xia.
@@ -616,7 +634,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 </ol>
 
 <h3>Editor</h3>
-<ol start="43" style="width:42em; text-align: left">
+<ol start="45" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
   David Chisnall, Deepak Garg, C&#259;t&#259;lin Hri&#539;cu, Mathias Payer.<br/>
   <b><a href="http://dx.doi.org/10.4230/DagRep.11.10.173">Secure Compilation
@@ -664,7 +682,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <!-- </ol> -->
 
 <h3>Theses</h3>
-<ol start="47" style="width:42em; text-align: left">
+<ol start="49" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#539;cu. <b><a href="https://catalin-hritcu.github.io/publications/catalin_habil.pdf">The Quest for Formally Secure Compartmentalizing Compilation</a></b>.<br/>Habilitation Thesis, ENS Paris, January 2019.
   <ul style="font-size: small">
@@ -728,23 +746,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <!-- </ol> -->
 
 <h3>Drafts, Informal Publications, and Workshops</h3>
-<ol start="50" style="width:42em; text-align: left">
-
-  <li style="margin-bottom: 1ex;">
-    Jérémy Thibault,
-    Arthur Azevedo de Amorim,
-    Roberto Blanco,
-    Aïna Linn Georges,
-    C&#259;t&#259;lin Hri&#539;cu,
-    Andrew Tolmach.
-    <b><a href="publications/SECOMP2CHERI-PriSC23.pdf">SECOMP2CHERI: Securely Compiling Compartments
-    from CompCert C to a Capability Machine</a></b>. Extended Abstract at
-      <a href="https://popl23.sigplan.org/home/prisc-2023">Workshop on Principles of Secure Compilation (PriSC)</a>.
-      Jan 2023.
-    <ul style="font-size: small">
-      <li><a href="https://github.com/secure-compilation/CompCert">Coq development</a></li>
-    </ul>
-  </li>
+<ol start="52" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
     Cezar-Constantin Andrici,
