--- a/group.html
+++ b/group.html
@@ -54,8 +54,6 @@
 [PhD student at Inria/ENS Paris, then at <a href="https://www.mpi-sp.org/">MPI-SP</a>/RUB]
 </div></li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://maxi-wuttke.codeberg.page">Maxi Wuttke</a></b> (PhD Student, MPI-SP since Feb 2023, former MPI-SWS)</li>
-
   <li style="margin-bottom: 1ex;"><b><a href="https://robblanco.github.io/">Roberto Blanco</a></b>
   <ul>
     <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.mpi-sp.org/">MPI-SP</a> since 2020-05:<br/>
@@ -66,12 +64,26 @@
   </ul>
   </li>
 
+  <li style="margin-bottom: 1ex;"><b><a href="https://github.com/sharwig">Sebastian Harwig</a></b> (Research Student Assistant, RUB)</li>
+   <!-- started in April 2024 -->
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://github.com/jos-len">Joseph Lenormand</a></b> (Research Intern, ENS Paris-Saclay)</li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://gitlab.aliens-lyon.fr/lucie.lahaye">Lucie Lahaye</a></b> (Research Intern, ENS Lyon) -- starting in May 2024</li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/ricleanu/">Ruxandra Icleanu</a></b> (Research Intern, University of Edinburgh) -- starting in June 2024</li>
+
+  <!-- <li style="margin-bottom: 1ex;"><a href="https://mtzguido.github.io">Guido Martínez</a> (Co-Supervised PhD Student, CIFASIS-CONICET Rosario)</li> -->
+
 </ul>
 
 
 <h2>Past Group Members</h2>
 
 <ul style="width:42em; text-align: left">
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://maxi-wuttke.codeberg.page">Maxi Wuttke</a></b> (PhD Student,
+    MPI-SP from Feb 2023 to March 2024, former MPI-SWS)</li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://mori1116.github.io">Dongjae Lee</a></b>
   <ul>
