--- a/publications.html
+++ b/publications.html
@@ -776,6 +776,13 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
     </ul>
   </li>
 
+  <li style="margin-bottom: 1ex;">
+    Jérémy Thibault and
+    C&#259;t&#259;lin Hri&#539;cu.
+    <b><a href="https://popl21.sigplan.org/details/prisc-2021-papers/5/Nanopass-Back-Translation-of-Multiple-Traces-for-Secure-Compilation-Proofs">Nanopass back-translation of multiple traces for secure compilation proofs</a></b>.
+      Extended Abstract at Workshop on Principles of Secure Compilation (PriSC), January 2021.
+  </li>
+
   <!-- <li style="margin-bottom: 1ex;"> -->
   <!--           Deepak Garg, -->
   <!--           C&#259;t&#259;lin Hri&#539;cu, -->
