--- a/publications.html
+++ b/publications.html
@@ -749,6 +749,18 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <ol start="52" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Roberto Blanco,
+    Christian Doczkal,
+    Jakob Feldtkeller,
+    Tim Güneysu, and
+    C&#259;t&#259;lin Hri&#539;cu.
+    <b><a href="https://hal.science/hal-04510257">Short Paper: Mechanized Proofs of Masking Security</a></b>.
+    <a href="https://plas23.github.io/">18th Workshop on Programming Languages and Analysis for Security (PLAS 2023</a> at
+    <a href="https://www.sigsac.org/ccs/CCS2023/">CCS 2023</a>).
+    November 2023.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Cezar-Constantin Andrici,
     Théo Winterhalter,
     C&#259;t&#259;lin Hri&#539;cu, and
