--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ could contribute:
     also PC Member in <a href="https://www.sigsac.org/ccs/CCS2018/papers">2018</a>)
   <ul>
   <!-- <li>First submission deadline: <b>28 January 2024</b></li> -->
-  <li>Second submission deadline: <b>29 April 2024</b></li>
+  <!-- <li>Second submission deadline: <b>29 April 2024</b></li> -->
   <li>Conference: 14-18 October 2024, Salt Lake City, Utah, USA</li>
   </ul>
   </li>
@@ -948,7 +948,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b>Upcoming: <a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=57071">Functional Programming</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr University Bochum</a>, April--July 2024</a>
+  <li style="margin-bottom: 1ex;"><b>Ongoing: <a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=57071">Functional Programming</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr University Bochum</a>, April--July 2024</a>
   </li>
 
   <li style="margin-bottom: 1ex;"><b>Recent: <a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=54279">Foundations of Programming Languages, Verification, and Security</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr University Bochum</a>, October 2023--February 2024</a>
