--- a/index.html
+++ b/index.html
@@ -202,17 +202,17 @@ could contribute:
   <!-- </ul> -->
   </li>
 
-  <li style="margin-bottom: 1ex;"><b>Distinguished Paper Award at <a href="https://www.ieee-security.org/TC/CSF2021">CSF 2021</a></b> for<br/>
-  <a href="https://github.com/SSProve/ssprove">SSProve: A Foundational Framework for Modular Cryptographic Proofs in Coq</a>
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"><b>Distinguished Paper Award at <a href="https://www.ieee-security.org/TC/CSF2021">CSF 2021</a></b> for<br/> -->
+  <!-- <a href="https://github.com/SSProve/ssprove">SSProve: A Foundational Framework for Modular Cryptographic Proofs in Coq</a> -->
+  <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;">
-  <b><a href="https://www.ieee-security.org/TC/SP2021/">IEEE Symposium on Security and Privacy, Oakland S&amp;P 2021</a></b> (PC Member)
-  <ul>
-  <!-- <li><b>Submission deadlines(!): <strike>4 June 2020, 3 September 2020,</strike> 3 December 2020</b></li> -->
-  <!-- <li>Conference: 23-27 May 2021, Online</li> -->
-  </ul>
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"> -->
+  <!-- <b><a href="https://www.ieee-security.org/TC/SP2021/">IEEE Symposium on Security and Privacy, Oakland S&amp;P 2021</a></b> (PC Member) -->
+  <!-- <ul> -->
+  <!-- <\!-- <li><b>Submission deadlines(!): <strike>4 June 2020, 3 September 2020,</strike> 3 December 2020</b></li> -\-> -->
+  <!-- <\!-- <li>Conference: 23-27 May 2021, Online</li> -\-> -->
+  <!-- </ul> -->
+  <!-- </li> -->
 
   <!-- <li style="margin-bottom: 1ex;"><b><a href="https://cezarandrici.com">Cezar Constantin-Andrici</a></b> won 1st prize at the Student Research Competition of <a href="https://icfp20.sigplan.org/track/icfp-2020-student-research-competition#Results">ICFP 2020</a> <\!-- (graduates section) -\-></li> -->
 
