--- a/index.html
+++ b/index.html
@@ -131,6 +131,14 @@ could contribute:
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
+  Member of editorial board for journal}:
+\begin{itemize}
+\item Editor for \href{https://dl.acm.org/journal/tops}{ACM Transactions on Privacy and Security (TOPS, formerly TISSEC)} since May 2024
+
+  <li style="margin-bottom: 1ex;">
+    <b><a href="https://dl.acm.org/journal/tops">ACM Transactions on Privacy and Security, TOPS</a></b> (<b>Editor</b> since May 2024)
+  </li>
+
   <li style="margin-bottom: 1ex;">
     <b><a href="https://www.sigsac.org/ccs/CCS2024/">Computer and Communications Security, CCS</b></a> <!-- https://www.sigsac.org/ccs.html -->
     (<b>Track PC Chair</b> for Formal Methods and Programming Languages in <a href="https://www.sigsac.org/ccs/CCS2024">2024</a>,
@@ -589,7 +597,7 @@ I am very fortunate to work with a group of outstanding students and starting re
     C&#259;t&#259;lin Hri&#539;cu, and
     Andrew Tolmach.
     <b><a href="http://arxiv.org/abs/2401.16277">SECOMP: Formally Secure Compilation of Compartmentalized C Programs</a></b>.
-    Accepted at CCS'24, Draft from January 2024.
+    Accepted at CCS'24, Draft from April 2024.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/CompCert">Coq development</a></li>
       <li><a href="publications/SECOMP2CHERI-PriSC23.pdf">An extended abstract</a> about this work was presented at
