--- a/index.html
+++ b/index.html
@@ -131,12 +131,8 @@ could contribute:
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
-  Member of editorial board for journal}:
-\begin{itemize}
-\item Editor for \href{https://dl.acm.org/journal/tops}{ACM Transactions on Privacy and Security (TOPS, formerly TISSEC)} since May 2024
-
   <li style="margin-bottom: 1ex;">
-    <b><a href="https://dl.acm.org/journal/tops">ACM Transactions on Privacy and Security, TOPS</a></b> (<b>Editor</b> since May 2024)
+    <b><a href="https://dl.acm.org/journal/tops">ACM Transactions on Privacy and Security, TOPS</a></b> (Editor since May 2024)
   </li>
 
   <li style="margin-bottom: 1ex;">
@@ -150,16 +146,17 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://danel.ahman.ee">Danel Ahman</a></b>, former PostDoc in my group, started as Associate Professor at <a href="https://cs.ut.ee/en">University of Tartu</a> in January 2024.</li>
-
   <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/CSFWweb/index.html">Computer Security Foundations</a>, CSF</b> (<b>Steering Committee Member</b> since 2024, <b>Test-of-Time Awards Chair</b> in <a href="https://csf2023.ieee-security.org">2023</a> and <a href="https://csf2024.ieee-security.org/">2024</a>; also PC Member in <a href="https://www.ieee-security.org/TC/CSF2020/">2020</a>, <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a> and <a href="https://csf2024.ieee-security.org/">2024</a>)
   <ul>
   <!-- <li><b>Submission deadlines: <del>8 May 2020, 2 October 2020,</del> and 8 February 2021</b></li> -->
   <!-- <li>CSF 2023 Symposium: 10-13 July 2023, Dubrovnik, Croatia</li> -->
   <!-- <li>Submission deadlines: <del>15 May 2023, 30 Sept 2023, and</del> <b>3 Feb 2024</b></li> -->
-  <li>Symposium: 8-12 July 2024, Enschede, The Netherlands </li>
+  <li>Next symposium: 8-12 July 2024, Enschede, The Netherlands</li>
+  <li>Next submission deadlines: 21 May 2024, 1 October 2024, 4 February 2025</li>
   </ul>
   </li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://danel.ahman.ee">Danel Ahman</a></b>, former PostDoc in my group, started as Associate Professor at <a href="https://cs.ut.ee/en">University of Tartu</a> in January 2024.</li>
 
   <li style="margin-bottom: 1ex;">
     <b><a href="https://popl24.sigplan.org/series/POPL">Principles of Programming Languages, POPL</b></a>
