--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@ could contribute:
   <!-- <li><b>Submission deadlines: <del>8 May 2020, 2 October 2020,</del> and 8 February 2021</b></li> -->
   <!-- <li>CSF 2023 Symposium: 10-13 July 2023, Dubrovnik, Croatia</li> -->
   <!-- <li>Submission deadlines: <del>15 May 2023, 30 Sept 2023, and</del> <b>3 Feb 2024</b></li> -->
-  <li>Next symposium: 8-12 July 2024, Enschede, The Netherlands</li>
-  <li>Next submission deadlines: 21 May 2024, 1 October 2024, 4 February 2025</li>
+  <li>Next symposium (<a href="https://csf2024.ieee-security.org">CSF 2024</a>): 8-12 July 2024, Enschede, The Netherlands</li>
+  <li>Next submission deadlines (<a href="https://csf2025.ieee-security.org">CSF 2025</a>): 21 May 2024, 1 October 2024, 4 February 2025</li>
   </ul>
   </li>
 
