--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@ could contribute:
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
-    <b><a href="https://dl.acm.org/journal/tops">ACM Transactions on Privacy and Security, TOPS</a></b> (Editor since May 2024)
+    <b><a href="https://dl.acm.org/journal/tops">ACM Transactions on Privacy and Security</a>, TOPS</b> (Editor since May 2024)
   </li>
 
   <li style="margin-bottom: 1ex;">
-    <b><a href="https://www.sigsac.org/ccs/CCS2024/">Computer and Communications Security, CCS</b></a> <!-- https://www.sigsac.org/ccs.html -->
+    <b><a href="https://www.sigsac.org/ccs/CCS2024/">Computer and Communications Security</a>, CCS</b> <!-- https://www.sigsac.org/ccs.html -->
     (<b>Track PC Chair</b> for Formal Methods and Programming Languages in <a href="https://www.sigsac.org/ccs/CCS2024">2024</a>,
     also PC Member in <a href="https://www.sigsac.org/ccs/CCS2018/papers">2018</a>)
   <ul>
@@ -159,7 +159,7 @@ could contribute:
   <li style="margin-bottom: 1ex;"><b><a href="https://danel.ahman.ee">Danel Ahman</a></b>, former PostDoc in my group, started as Associate Professor at <a href="https://cs.ut.ee/en">University of Tartu</a> in January 2024.</li>
 
   <li style="margin-bottom: 1ex;">
-    <b><a href="https://popl24.sigplan.org/series/POPL">Principles of Programming Languages, POPL</b></a>
+    <b><a href="https://popl24.sigplan.org/series/POPL">Principles of Programming Languages</a>, POPL</b>
     (<b>Artifact Evaluation Chair</b> in <a href="https://popl18.sigplan.org/">2018</a> and <a href="https://popl19.sigplan.org/">2019</a>;
      also PC Member in <a href="https://popl17.sigplan.org/">2017</a> and <a href="https://popl24.sigplan.org">2024</a>)
   <ul>
