--- a/group.html
+++ b/group.html
@@ -82,7 +82,7 @@
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://maxi-wuttke.codeberg.page">Maxi Wuttke</a></b> (PhD Student,
+  <li style="margin-bottom: 1ex;"><b><a href="https://maxi-wuttke.codeberg.page">Maxi Wuttke</a></b> (<!-- PhD --> Student,
     MPI-SP from Feb 2023 to March 2024, former MPI-SWS)</li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://mori1116.github.io">Dongjae Lee</a></b>
@@ -109,7 +109,7 @@
 
   <li style="margin-bottom: 1ex;"><b><a href="https://mtzguido.github.io">Guido Martínez</a></b>
   <ul>
-    <li style="margin-top: 1ex;">Co-Supervised PhD Student at <a href="http://www.cifasis-conicet.gov.ar">CIFASIS</a>-<a href="https://www.rosario-conicet.gov.ar/investigacion/cifasis-menu">CONICET</a> Rosario since 2017-04:<br/>
+    <li style="margin-top: 1ex;">Co-Supervised <!-- PhD --> Student at <a href="http://www.cifasis-conicet.gov.ar">CIFASIS</a>-<a href="https://www.rosario-conicet.gov.ar/investigacion/cifasis-menu">CONICET</a> Rosario since 2017-04:<br/>
      Metatheory for Semi-Automatic Verification of Effectful Programs.</li>
     <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2018-09 to 2018-12:<br/> <a href="https://arxiv.org/abs/1803.06547">Meta-F*: Proof Automation with SMT, Tactics, and Metaprograms</a></li>
     <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2016-01 to 2016-06:<br/> <a href="https://www.fstar-lang.org/papers/dm4free/">Dijkstra Monads for Free</a></li>
