--- a/group.html
+++ b/group.html
@@ -82,7 +82,7 @@
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://maxi-wuttke.codeberg.page">Maxi Wuttke</a></b> (<!-- PhD --> Student,
+  <li style="margin-bottom: 1ex;"><b><a href="https://maxi-wuttke.codeberg.page">Maxi Wuttke</a></b> (<!-- PhD -->Student,
     MPI-SP from Feb 2023 to March 2024, former MPI-SWS)</li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://mori1116.github.io">Dongjae Lee</a></b>
@@ -92,7 +92,7 @@
     </li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
-  [MSc Student at Seoul National University, South Korea] <!-- [Now ? at ??] -->
+  [MSc Student at Seoul National University, South Korea] <b>[Soon PhD Student at MIT]</b>
   </div>
   </li>
 
@@ -313,7 +313,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
 [PhD Student at <a href="https://www.eecs.mit.edu/">MIT</a>]
-[Now at Amazon AWS] [<b>Soon to join <a href="https://www.epfl.ch/schools/ic/">EPFL</a> as Assistant Professor</b>]
+[Now at Amazon AWS] [<b>Now Assistant Professor at <a href="https://www.epfl.ch/schools/ic/">EPFL</a></b>]
 </div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://tomer.libal.info/">Tomer Libal</a></b>
