--- a/group.html
+++ b/group.html
@@ -68,8 +68,10 @@
    <!-- started in April 2024 -->
 
   <li style="margin-bottom: 1ex;"><b><a href="https://github.com/jos-len">Joseph Lenormand</a></b> (Research Intern, ENS Paris-Saclay)</li>
+  <!-- starting in Feb 2024 -->
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://gitlab.aliens-lyon.fr/lucie.lahaye">Lucie Lahaye</a></b> (Research Intern, ENS Lyon) -- starting in May 2024</li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://gitlab.aliens-lyon.fr/lucie.lahaye">Lucie Lahaye</a></b> (Research Intern, ENS Lyon)</li>
+  <!-- starting in May 2024 -->
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/ricleanu/">Ruxandra Icleanu</a></b> (Research Intern, University of Edinburgh) -- starting in June 2024</li>
 
